# SLAM_Scripts

./: README.md
Bundle_Adjustment/Curve_Fitting/: curvefitting.cpp
Bundle_Adjustment/Pose_Estimation/: CMakeLists.txt  pose_estimation.cpp
Feature_Extraction_Matching/: CMakeLists.txt  orb.cpp
Pose_Estimation/: 8_point_ransac.py  CMakeLists.txt  pose_2d2d.cpp
Pose_Graph_Optimization/: pose_graph_optimization.ipynb
Smart_Pointers/: reference_vs_pointer.cpp  smart_ptr.cpp
Triangulation/: CMakeLists.txt  triangulation.cpp
VBoW/: CMakeLists.txt  bow_features.cpp  loop_closure.cpp  loop_closure_kitti.cpp
VBoW/cmake_modules/: FindDBoW3.cmake
